Revision history for PostScript-Report

0.05   NOT
	- Use PostScript::File::Metrics (requires PostScript::File 2.00)
	  You no longer need Font::AFM to get word wrapping.
	- Call pstr as a method to take advantage of auto_hyphen
	  processing in PostScript::File 2.00.	You should read
	  Hyphens and Minus Signs in PostScript::File's documentation.
	- Fixed memory leak (Font should have used a weak reference)

0.04   October 29, 2009
	- You can now indicate which sides should have a border
	- You can now omit \%data and/or \@rows when calling run
	- Use cp1252 encoding (requires PostScript::File 1.05)
	- Fixed crash caused by a VBox with only 1 child

0.03   October 28, 2009
	- Added background attribute to Component
	- Added detail_background attribute to Report
	- Added stripe & stripe_page to Builder
	- Add PageOrder: Ascend comment
	- Fixed bug in multiline FieldTL (was using wrong line height)
	- Warn in documentation against making padding_bottom too small

0.02   October 22, 2009
	- Builder allows scalar ref as shortcut for Value::Constant
	  and _default overrides default_field_type in a container
	- Warn if a field's value does not exist.
	  Do not warn about existing but undefined values.
	- Added the ps_parameters attribute to Report
	- Updated documentation

0.01   October 20, 2009
	- Initial release